# FHV_ProgrammingConecpts

./: README.md
Exercises/ftp_client/: CMakeLists.txt  FTPClient.cpp  FTPClient.h  MySocket.cpp  MySocket.h  README.md  docker-compose.yaml  main.cpp
Exercises/ftp_client/includes/: FTPClient.h  FtpClient.h  FtpSocket.h  MySocket.h
Exercises/ftp_client/includes/enums/: FTPResponseCode.h  FtpCommand.h  FtpServerResponseCode.h
Exercises/ftp_client/includes/exeptions/: LoginFailureException.h  ParsePasvFailureException.h  ResponseFailureException.h  SocketConnectionFailureException.h
Exercises/ftp_client/src/: FTPClient.cpp  FtpClient.cpp  FtpSocket.cpp  MySocket.cpp
Exercises/myAlloc_c/: myAlloc_c.sln
Exercises/myAlloc_c/myAlloc_c/: myAlloc.c  myAlloc_c.vcxproj  myAlloc_c.vcxproj.filters  myMem.c
Exercises/myMalloc/: myMalloc.sln
Exercises/myMalloc/myMalloc/: myMalloc.c  myMalloc.vcxproj  myMalloc.vcxproj.filters  myMem.c  myMem.h
Exercises/observer_c/: observer_c.sln
Exercises/observer_c/observer_c/: observer_c.c  observer_c.vcxproj  observer_c.vcxproj.filters
Exercises/stack_cpp/: stack_cpp.sln
Exercises/stack_cpp/stack_cpp/: main.cpp  stack.cpp  stack.h  stack_cpp.vcxproj
ftp_client/: .gitignore  CMakeLists.txt
ftp_client/includes/: FtpClient.h
ftp_client/includes/enums/: FtpCommand.h
ftp_client/includes/exeptions/: SocketDataFailureException.h
ftp_client/src/: FtpClient.cpp
